--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps =
     pytest-cov
     hypothesis
     hypothesis-pytest
+    mock
 commands =
     pip install -e .
     py.test --doctest-modules --cov=cogitare {posargs:cogitare tests}
