--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     mock
 commands =
     pip install -e .
-    py.test --doctest-modules --cov=cogitare {posargs:cogitare tests}
+    py.test --cov=cogitare {posargs:cogitare tests}
 
 [testenv:py36]
 deps =
