--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,24 @@ sudo: false
 env:
  - TOXENV=py27
  - TOXENV=py36
+
 install:
- - pip install -U tox twine wheel codecov flake8
-script: tox
+    - pip install -U tox twine wheel codecov flake8
+    - pip install --user travis-sphinx
+    - pip install -r requirements.txt
+    - pip install http://download.pytorch.org/whl/cu75/torch-0.2.0.post3-cp36-cp36m-manylinux1_x86_64.whl
+    - pip install -r docs/requirements.txt
+    - python setup.py develop
+
+script:
+    - tox
+    - travis-sphinx build
+
 after_success:
-  - codecov
-  - flake8 cogitare/
+    - codecov
+    - flake8 cogitare/
+    - travis-sphinx deploy
+
 cache:
   directories:
     - $HOME/.cache/pip
