--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ install:
     - pip install -r docs/requirements.txt
     - python setup.py develop
 
+before_script:
+    - "export DISPLAY=:99"
+    - "sh -e /etc/init.d/xvfb start"
+    - sleep 3
 script:
     - tox
     - travis-sphinx build
