--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
 
 install:
     - sudo apt-get install python-tk
+    - sudo apt-get install pandoc
     - pip install -U tox twine wheel codecov flake8
     - pip install travis-sphinx
     - pip install -r requirements.txt
