update to pytorch 1.2

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-six>=1.10.0
-numpy>=1.12.1
-tqdm>=4.11.2
-matplotlib>=2.0.2
-dask>=0.15.2
-toolz>=0.8.2
-cloudpickle>=0.4.0
+six>=1.11.0
+numpy>=1.17.2
+tqdm>=4.36.1
+matplotlib>=3.1.1
+dask>=2.4.0
+toolz>=0.10.0
+cloudpickle>=1.2.2
 futures>=3.1.1
-coloredlogs>=7.3
+coloredlogs>=10.0
 humanize>=0.5.1
+torch>=1.2.0
+torchvision>=0.4.0
