--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27,py36
+envlist = py37
 
 [testenv]
 setenv =
@@ -15,14 +15,3 @@ deps =
 commands =
     pip install -e .
     py.test --cov=cogitare {posargs:cogitare tests}
-
-[testenv:py36]
-deps =
-    http://download.pytorch.org/whl/cu90/torch-0.3.0.post4-cp36-cp36m-linux_x86_64.whl
-    {[testenv]deps}
-basepython = python3.6
-
-[testenv:py27]
-deps =
-    http://download.pytorch.org/whl/cu90/torch-0.3.0.post4-cp27-cp27mu-linux_x86_64.whl 
-    {[testenv]deps}
