--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,11 @@ install:
 
 before_script:
     - "export DISPLAY=:99"
-    - "sh -e /etc/init.d/xvfb start"
     - sleep 3
+
+services:
+    - xvfb
+
 script:
     - tox
     - travis-sphinx build
